# Diplomado

./: Readmi.MD  app.py
Codigos/: Clase Wilmer.ipynb  Clase_06_18.ipynb  Consulta_socrata.ipynb  Ejercicio_limpieza.ipynb  Primer_Cuaderno.ipynb  Semana_2.ipynb  Taller_Entregable_1.ipynb  df_men.csv  mi_base_datos.db
Dashboard_clase/: app.py  mapa.py  pyproject.toml
Reto_dashboard/: app.py  cargar_datos.py  cargar_datos_secop.py  transformacion_secop.py  visualizaciones_secop.py
